--- a/tests/resources/resources.qrc
+++ b/tests/resources/resources.qrc
@@ -2,5 +2,6 @@
 <qresource>
     <file>test-certificate.crt</file>
     <file>test-certificate.key</file>
+    <file>test-configuration.conf</file>
 </qresource>
 </RCC>
